# veil

./: .gitignore  CONTRIBUTING.md  GOOD_FIRST_ISSUES.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: battletest.py  crawl_any_site.py  quickstart.py
src/veil/: __init__.py  __main__.py  cli.py  crawl.py  engine.py  extract.py  models.py
src/veil/politeness/: __init__.py  throttle.py
src/veil/proxies/: __init__.py  pool.py
src/veil/strategies/: __init__.py  base.py  browser.py  http_basic.py  tls_impersonate.py
tests/: test_crawl.py  test_engine.py  test_extract.py
